z-index fix for mobile nav

--- a/styles/main.css
+++ b/styles/main.css
@@ -68,21 +68,6 @@ a:active {
 
 /* Mobile Nav */
 
-.nav > .logo{ 
-  width: 20rem;
-}
-
-.text {
-  text-transform: uppercase;
-}
-
-.nav-btn{
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  font-size: 1.8rem;
-}
-
 .open-btn{
   position: fixed;
   top: 30px;
@@ -103,6 +88,12 @@ a:active {
   opacity: 1;
 }
 
+.nav-btn{
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 1.8rem;
+}
 .nav {
   position: fixed;
   top: 0;
@@ -110,10 +101,19 @@ a:active {
   height: 100vh;
   transform: translateX(-100%);
   transition: transform 0.3s ease-in-out;
+  z-index: 100;
 }
 
 .nav.visible{
   transform: translateX(0);
+}
+
+.nav > .logo{ 
+  width: 20rem;
+}
+
+.text {
+  text-transform: uppercase;
 }
 
 .nav-purple{
